Add more version descriptions